Rename main file

--- a/rec_invoice_1.ipynb
+++ b/rec_invoice_1.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "2ce9975c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\dark_h14\\Jupiter_notebooks\\pdf_recognition_2\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "c7b69720",
    "metadata": {},
    "outputs": [],
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "fe7baa84",
    "metadata": {},
    "outputs": [],
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "1eb7625a",
    "metadata": {},
    "outputs": [
@@ -83,7 +92,7 @@
        " 'М-15 №1011816831 от 12.05.2024. сжат.pdf']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "e8333aca",
    "metadata": {},
    "outputs": [],
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "8133e623",
    "metadata": {},
    "outputs": [
@@ -118,7 +127,7 @@
        "'pdf\\\\æτÑΓ [F6PIF7].pdf'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "8445f485",
    "metadata": {},
    "outputs": [],
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "be1b6b6c",
    "metadata": {},
    "outputs": [],
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "6d339306",
    "metadata": {},
    "outputs": [],
@@ -211,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "b68b1d52",
    "metadata": {},
    "outputs": [],
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "ba481a3e",
    "metadata": {},
    "outputs": [],
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cfb954b1",
    "metadata": {},
    "outputs": [],
@@ -265,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "0735ce82",
    "metadata": {},
    "outputs": [],
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "8b87709a",
    "metadata": {},
    "outputs": [
@@ -316,8 +325,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:04<00:00,  4.81s/it]\n",
-      "Recognizing Text: 100%|██████████| 111/111 [02:10<00:00,  1.17s/it]\n"
+      "Detecting bboxes: 100%|██████████| 1/1 [00:04<00:00,  4.36s/it]\n",
+      "Recognizing Text: 100%|██████████| 111/111 [01:58<00:00,  1.07s/it]\n"
      ]
     },
     {
@@ -331,8 +340,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:05<00:00,  5.61s/it]\n",
-      "Recognizing Text: 100%|██████████| 111/111 [02:11<00:00,  1.18s/it]\n"
+      "Detecting bboxes: 100%|██████████| 1/1 [00:05<00:00,  5.84s/it]\n",
+      "Recognizing Text: 100%|██████████| 111/111 [02:08<00:00,  1.16s/it]\n"
      ]
     },
     {
@@ -347,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:05<00:00,  5.19s/it]\n",
+      "Detecting bboxes: 100%|██████████| 1/1 [00:04<00:00,  4.93s/it]\n",
       "Recognizing Text: 100%|██████████| 145/145 [01:29<00:00,  1.62it/s]\n"
      ]
     },
@@ -362,8 +371,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:07<00:00,  7.22s/it]\n",
-      "Recognizing Text: 100%|██████████| 145/145 [01:31<00:00,  1.59it/s]\n"
+      "Detecting bboxes: 100%|██████████| 1/1 [00:05<00:00,  5.21s/it]\n",
+      "Recognizing Text: 100%|██████████| 145/145 [01:41<00:00,  1.43it/s]\n"
      ]
     },
     {
@@ -378,8 +387,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:04<00:00,  4.83s/it]\n",
-      "Recognizing Text: 100%|██████████| 39/39 [01:39<00:00,  2.55s/it]\n"
+      "Detecting bboxes: 100%|██████████| 1/1 [00:06<00:00,  6.42s/it]\n",
+      "Recognizing Text: 100%|██████████| 39/39 [01:37<00:00,  2.49s/it]\n"
      ]
     }
    ],
@@ -389,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "930425e5",
    "metadata": {},
    "outputs": [
@@ -399,7 +408,7 @@
        "2"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "b6e11b5d",
    "metadata": {},
    "outputs": [
@@ -753,7 +762,7 @@
        "15   Страница 2 из Е  Страница 2 из Е  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "2532c01b",
    "metadata": {},
    "outputs": [],
@@ -775,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "111da54e",
    "metadata": {},
    "outputs": [],
@@ -808,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "29ee5a7d",
    "metadata": {},
    "outputs": [],
@@ -834,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "e620222e",
    "metadata": {},
    "outputs": [],
@@ -878,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "54f38980",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1212,7 @@
        "15                                         Страница 2 из Е  Страница 2 из Е  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
