--- a/rec_invoice_1.ipynb
+++ b/rec_invoice_1.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "2ce9975c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\dark_h14\\Jupiter_notebooks\\pdf_recognition_2\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "c7b69720",
    "metadata": {},
    "outputs": [],
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "fe7baa84",
    "metadata": {},
    "outputs": [],
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "1eb7625a",
    "metadata": {},
    "outputs": [
@@ -86,13 +77,10 @@
      "data": {
       "text/plain": [
        "['ON_SCHET_2BM-7704010978-770401001-201407030455299009568_2BM-7736520080-2012112806114018023400000000000_20250228_6ad2050b-3ccc-4db9-beff-fc3c7d766348.PDF',\n",
-       " 'æτÑΓ [F6PIF7].pdf',\n",
-       " 'М-15 №1011685577 от 08.12.2023.pdf',\n",
-       " 'М-15 №1011816353 от 11.05.2024.сжат.pdf',\n",
-       " 'М-15 №1011816831 от 12.05.2024. сжат.pdf']"
+       " 'æτÑΓ [F6PIF7].pdf']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "e8333aca",
    "metadata": {},
    "outputs": [],
@@ -117,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "8133e623",
    "metadata": {},
    "outputs": [
@@ -127,7 +115,7 @@
        "'pdf\\\\æτÑΓ [F6PIF7].pdf'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "8445f485",
    "metadata": {},
    "outputs": [],
@@ -168,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "be1b6b6c",
    "metadata": {},
    "outputs": [],
@@ -193,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "6d339306",
    "metadata": {},
    "outputs": [],
@@ -220,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "b68b1d52",
    "metadata": {},
    "outputs": [],
@@ -230,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "ba481a3e",
    "metadata": {},
    "outputs": [],
@@ -263,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "cfb954b1",
    "metadata": {},
    "outputs": [],
@@ -274,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "0735ce82",
    "metadata": {},
    "outputs": [],
@@ -296,11 +284,11 @@
     "        c_dfs = get_dataframes_from_pic(pic_file, ocr, pics_folder)\n",
     "\n",
     "        dfs.extend(c_dfs)\n",
-    "        pic_filepath = os.path.join(pics_folder, pic_file)\n",
-    "        image = PilImage.open(pic_filepath)\n",
+    "        # pic_filepath = os.path.join(pics_folder, pic_file)\n",
+    "        # image = PilImage.open(pic_filepath)\n",
     "\n",
-    "        predictions = recognition_predictor([image], det_predictor=detection_predictor)\n",
-    "        texts.extend(predictions)\n",
+    "        # predictions = recognition_predictor([image], det_predictor=detection_predictor)\n",
+    "        # texts.extend(predictions)\n",
     "\n",
     "    \n",
     "\n",
@@ -309,86 +297,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "8b87709a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------------\n",
-      "page_0.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:04<00:00,  4.36s/it]\n",
-      "Recognizing Text: 100%|██████████| 111/111 [01:58<00:00,  1.07s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DF-0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:05<00:00,  5.84s/it]\n",
-      "Recognizing Text: 100%|██████████| 111/111 [02:08<00:00,  1.16s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------------\n",
-      "page_1.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:04<00:00,  4.93s/it]\n",
-      "Recognizing Text: 100%|██████████| 145/145 [01:29<00:00,  1.62it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DF-0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:05<00:00,  5.21s/it]\n",
-      "Recognizing Text: 100%|██████████| 145/145 [01:41<00:00,  1.43it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------------\n",
-      "page_2.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detecting bboxes: 100%|██████████| 1/1 [00:06<00:00,  6.42s/it]\n",
-      "Recognizing Text: 100%|██████████| 39/39 [01:37<00:00,  2.49s/it]\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\dark_h14\\Jupiter_notebooks\\pdf_recognition_2\\.venv\\Lib\\site-packages\\PIL\\ImageFile.py:547\u001b[39m, in \u001b[36m_save\u001b[39m\u001b[34m(im, fp, tile, bufsize)\u001b[39m\n\u001b[32m    546\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m547\u001b[39m     fh = \u001b[43mfp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfileno\u001b[49m()\n\u001b[32m    548\u001b[39m     fp.flush()\n",
+      "\u001b[31mAttributeError\u001b[39m: '_idat' object has no attribute 'fileno'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m dfs, texts = \u001b[43mget_tables_and_text_from_pdf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_filepath\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mget_tables_and_text_from_pdf\u001b[39m\u001b[34m(pdf_filename, pics_folder)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_tables_and_text_from_pdf\u001b[39m(pdf_filename, pics_folder=\u001b[33m'\u001b[39m\u001b[33mpics\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m      2\u001b[39m     \u001b[38;5;66;03m# Get images from pdf\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     pic_files = \u001b[43mimages_from_pdf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpics_folder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m     ocr = PdfOCR(langs=[\u001b[33m\"\u001b[39m\u001b[33mru\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m      5\u001b[39m     recognition_predictor = RecognitionPredictor()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mimages_from_pdf\u001b[39m\u001b[34m(pdf_filename, pics_folder)\u001b[39m\n\u001b[32m     14\u001b[39m     pics_files.append(pic_fname)\n\u001b[32m     15\u001b[39m     \u001b[38;5;66;03m# Save pages as images in the pdf\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m     \u001b[43mpage\u001b[49m\u001b[43m.\u001b[49m\u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpic_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPNG\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m     \u001b[38;5;66;03m# enhance_image(pic_path)\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m pics_files\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\dark_h14\\Jupiter_notebooks\\pdf_recognition_2\\.venv\\Lib\\site-packages\\PIL\\Image.py:2568\u001b[39m, in \u001b[36mImage.save\u001b[39m\u001b[34m(self, fp, format, **params)\u001b[39m\n\u001b[32m   2565\u001b[39m     fp = cast(IO[\u001b[38;5;28mbytes\u001b[39m], fp)\n\u001b[32m   2567\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m2568\u001b[39m     \u001b[43msave_handler\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2569\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[32m   2570\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m open_fp:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\dark_h14\\Jupiter_notebooks\\pdf_recognition_2\\.venv\\Lib\\site-packages\\PIL\\PngImagePlugin.py:1431\u001b[39m, in \u001b[36m_save\u001b[39m\u001b[34m(im, fp, filename, chunk, save_all)\u001b[39m\n\u001b[32m   1427\u001b[39m     im = _write_multiple_frames(\n\u001b[32m   1428\u001b[39m         im, fp, chunk, mode, rawmode, default_image, append_images\n\u001b[32m   1429\u001b[39m     )\n\u001b[32m   1430\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m im:\n\u001b[32m-> \u001b[39m\u001b[32m1431\u001b[39m     \u001b[43mImageFile\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_save\u001b[49m\u001b[43m(\u001b[49m\u001b[43mim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_idat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchunk\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mzip\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43mim\u001b[49m\u001b[43m.\u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrawmode\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1433\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m info:\n\u001b[32m   1434\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m info_chunk \u001b[38;5;129;01min\u001b[39;00m info.chunks:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\dark_h14\\Jupiter_notebooks\\pdf_recognition_2\\.venv\\Lib\\site-packages\\PIL\\ImageFile.py:551\u001b[39m, in \u001b[36m_save\u001b[39m\u001b[34m(im, fp, tile, bufsize)\u001b[39m\n\u001b[32m    549\u001b[39m     _encode_tile(im, fp, tile, bufsize, fh)\n\u001b[32m    550\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mAttributeError\u001b[39;00m, io.UnsupportedOperation) \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[32m--> \u001b[39m\u001b[32m551\u001b[39m     \u001b[43m_encode_tile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbufsize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    552\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(fp, \u001b[33m\"\u001b[39m\u001b[33mflush\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    553\u001b[39m     fp.flush()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\dark_h14\\Jupiter_notebooks\\pdf_recognition_2\\.venv\\Lib\\site-packages\\PIL\\ImageFile.py:570\u001b[39m, in \u001b[36m_encode_tile\u001b[39m\u001b[34m(im, fp, tile, bufsize, fh, exc)\u001b[39m\n\u001b[32m    567\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m exc:\n\u001b[32m    568\u001b[39m     \u001b[38;5;66;03m# compress to Python file-compatible object\u001b[39;00m\n\u001b[32m    569\u001b[39m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m570\u001b[39m         errcode, data = \u001b[43mencoder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbufsize\u001b[49m\u001b[43m)\u001b[49m[\u001b[32m1\u001b[39m:]\n\u001b[32m    571\u001b[39m         fp.write(data)\n\u001b[32m    572\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m errcode:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -398,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "930425e5",
    "metadata": {},
    "outputs": [
@@ -419,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b6e11b5d",
    "metadata": {},
    "outputs": [
@@ -774,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2532c01b",
    "metadata": {},
    "outputs": [],
@@ -784,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "111da54e",
    "metadata": {},
    "outputs": [],
@@ -817,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "29ee5a7d",
    "metadata": {},
    "outputs": [],
@@ -843,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e620222e",
    "metadata": {},
    "outputs": [],
@@ -887,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "54f38980",
    "metadata": {},
    "outputs": [
